--- a/.github/workflows/build.yml.org
+++ b/.github/workflows/build.yml.org
@@ -1,8 +1,5 @@
 name: CI
 on:
-  push:
-  schedule:
-    - cron: '0 6 * * *'
   workflow_dispatch:
     inputs:
       logLevel:
@@ -45,13 +42,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: '0'
-
+      
       - name: get version
         run: echo "BUILD_VERSION=`git describe --tags`" >> $GITHUB_ENV
-
-      - id: new_version_ts
-        name: GET_TS_VERSION
-        run: export RELEASE_VERSION_TS=$(curl --silent "https://api.github.com/repos/tailscale/tailscale/tags" | jq -r '.[0].name'); echo "RELEASE_VERSION_TS=$RELEASE_VERSION_TS" >> $GITHUB_ENV
 
       - name: conditional bmcd version injection
         if: inputs.bmcd_version != ''
@@ -88,7 +81,7 @@ jobs:
       - name: archive artifacts
         uses: actions/upload-artifact@v3
         with:
-          if-no-files-found: error
-          name: tp2-${{ env.BUILD_VERSION }}+$RELEASE_VERSION_TS
+          if-no-files-found: error 
+          name: tp2-${{ env.BUILD_VERSION }}
           path: artifacts/*
 
